hostinger-clone/src/Styles/Dashboard.module.css
/* --------------------------------------------------------------Top Container--------------------------------------- */

.topContainer{
    display: flex;
    min-height: 100vh;
    padding-top: 80px;
    background-color: #1857ab;
}

.firstChild{
    width: 50%;
    min-height: 100vh;
    font-family: inherit;
    z-index: 2;
    color: #fff;
}

.secondChild{
    width: 50%;
    height: 100vh;
}

.handImageContainer{
    display: none;
    z-index: 1;
    width: 50%;
    margin-top: 10%;
    height: 60vh;
    background-color: #1857ab;
}


/* -------------------------------------------------poster---------------------------------------------- */
.poster{
    color: #1857ab;
}

.midContiner{
    width: 60%;
    margin-left: 20%;
    min-height: 100vh;
    display: grid;
    grid-template-columns: repeat(2,1fr);
    column-gap: 10%;  
}


/* ---------------------------------------------------------our Approach------------------------------------- */
.ourApproach{
  /* border: 1px solid black; */
  width: 100%;
  min-height: 100vh;
  display: flex;
  background-color: #1857ab;
}

.ourApproachCh1{
    width: 50%;
    min-height: 100vh ;
}
.ourApproachCh2{
    width: 50%;
    min-height: 100vh ;
    
}

/* ---------------------------------------------------------------------Benefit --------------------------------------- */
.benefitContiner{
    width: 80%;
    margin-left: 10%;
    display: grid;
    grid-template-columns: repeat(3,1fr);
    margin-top: 5%;
}


/* -------------------------------------------------------------------Contact--------------------------------------------- */

.contact{
    display: flex;
    justify-content: center;
    width: 100%;
    min-height: 100vh;
    background-color: #1857ab;
    margin-top: 5%;
}

.contactCh1{
    width: 40%;
    min-height: 100vh;
}

.contactContent{
    width: 100%;
}

.contactForm{
    width: 100%;
    min-height: 70vh;
    margin-top: 10%;
}

.contactImageContainer{
    width: 40%;
    height: 120vh;
}



/* ---------------------------------------------------------Footer--------------------------------------------------- */

.footer{
    border: 2px solid #1857ab;
    width: 100%;
    min-height: 35vh;
    background-color: #1857ab;
}

.footerContainer{
    display: flex;
    justify-content: space-between;
    width: 80%;
    height: 20%;
    margin-top: 12%;
}

.footerLogo{
    width: 100px;
    height: 80px;
}

.footerCh2{
    display: flex;
}

.footerContent{
    width: 200px;
    height: 100px;
}

/* ---------------------------------------------------------Helped Company-------------------------------------- */

.company{
    width: 100%;
    min-height: 40vh;
    margin-top: 5%;
    display: flex;
    justify-content:center;
    align-items: center;
}

.companyContainer{
    width:80%;
    display: flex;
    justify-content: space-around;
}

.companyLogo{
    width: 200px;
    height: 200px;
}



/* --------------------------------------------------------------Responsivness------------------------------------------------ */

@media (max-width: 1024px) {
    .topContainer{
        min-height: 50vh;
    }
    .firstChild{
        width: 100%;
        min-height: 50vh;
        margin-right: -50%;
        margin-right: -20%;
        padding-bottom: 15%;
    }
    .secondChild{
        display: none;
    }
    .handImageContainer{
        display: block;
    }

    
    .midContiner{
        width: 60%;
        min-height: 100vh;
        display: block;
        margin-left: 20%;
        margin-top: 5%;
        margin-bottom: 5%;
    }

 
    .benefitContiner{
        display: block;
    }



    .ourApproach{
        display: block;
    }
    .ourApproachCh1{
        width: 60%;
        margin-left: 20%;
        min-height: 60vh;
    }
    .ourApproachCh2{
        width: 60%;
        margin-left: 20%;
    }

    .companyContainer{
        display: flex; 
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .contactCh1{
        width: 360px;
        padding: 20px;
    }
    

    .footerContainer{
        display: block;   
        width: 60%;
    }

    .footerCh2{
        display: block;
    }
   
}

